[project]
name = "multimodal-chat-backend"
version = "0.1.0"
description = "Multi-modal chat application backend with LangGraph"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.0.0",
    "mysql-connector-python>=9.0.0",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-mysql==3.0.0",
    "pymysql==1.1.2",
    "cryptography==46.0.3",
    "aiomysql==0.3.2",
    "asyncmy==0.2.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
